# one-parameter-model

./: .gitignore  CLAUDE.md  LICENSE  OneParameterModel.py  README.md  alpha-ARC-AGI-1.json  alpha.json  alpha.txt  blog.py  export.py  final.md  intuition.py  pyproject.toml  warmup.py
.github/workflows/: deploy.yml
docs/: docs.html  index.html
docs/public/data/ARC-AGI-1/: train.json
docs/public/src/: main.py  model.py
extras/: interpolate.py  marimo_feedback.md  spline.py
public/alpha/: ARC-AGI-2.json  alpha-ARC-AGI-2.json
public/cache/cached_decode/: D_bvrfaz1Y-F_U5YKcFhgK9ssWbyUSSvlDUj8A-2rOxGk.pickle  D_e7vGYYjk6fj946Dl4_Pp5-p8_UwWVHIJwUbGpnM51l4.pickle
public/data/: arc-agi-evaluations.json
public/data/ARC-AGI-1/: eval.json
public/data/ARC-AGI-2/: train.json
public/data/alpha/: alpha_arc-agi-2_p38.json  alpha_arc_agi_1_p8.json
public/data/arc-agi-2/: public-eval.jsonl  public-train.jsonl
public/src/: data.py  main.py  make-arc-agi-2.py  model.py
src/: model.py  utils.py
src/arc-agi2/: blog.ipynb  data.py  interpolate.py  one_parameter_model.py  spline.py  srm.py  utils.py
src/arc-agi2/public/data/ARC-AGI-2/: eval.json
src/arc_agi2/: __init__.py
src/one_parameter_model/: __init__.py  animal_shapes.ipynb  animal_shapes.py  data.py  demo.py  main.py  model.py  timing.py  utils.py
