[project]
name = "arc-agi2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.14.17",
    "pillow>=11.3.0",
    "numpy>=2.3.2",
    "icecream>=2.1.7",
    "gmpy2>=2.2.1",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
