[project]
name = "arc-agi2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.14.17",
    "pillow>=11.3.0",
    "numpy>=2.3.2",
    "icecream>=2.1.7",
    "gmpy2>=2.2.1",
    "matplotlib>=3.10.5",
    "datasets>=4.0.0",
    "joblib>=1.5.1",
    "pip>=25.2",
    "ipykernel>=6.30.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc-agi2"]
