[project]
name = "one-parameter-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "gmpy2>=2.2.1",
    "matplotlib>=3.10.6",
    "datasets>=4.0.0",
    "marimo>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

